[tool.poetry]
name = "structurefactor"
version = "0.1.0"
description = "Dependency manager for yodaStruct"
authors = ["Rohit Goswami (HaoZeke) <rohit.goswami@aol.com>","Amrita Goswami <amrita16thaug646@gmail.com>"]
license = "MIT"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
conan = "^1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
